test/libsolidity/syntaxTests/abstract/abstract_only.sol
abstract
// ----
// ParserError: (9-9): Expected keyword "contract", "interface" or "library".
// ParserError: (9-9): Expected identifier but got end of source
